Added Enviroment Variables for seed and rcon